Fix overflow issues due to full-width

--- a/static/global.css
+++ b/static/global.css
@@ -29,6 +29,7 @@ body {
 	font-size: 1.8rem;
 	line-height: 1.5;
 	color: black;
+	overflow-x: hidden;
 }
 
 h1, h2, h3, h4, h5, h6 {
